--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                     <navigationItem key="navigationItem" id="hwb-eH-43L">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="VvX-UO-4SO">
                             <connections>
-                                <segue destination="iIY-Ku-SbV" kind="show" id="l6J-ae-eXG"/>
+                                <segue destination="iIY-Ku-SbV" kind="show" identifier="juegoSegue" id="l6J-ae-eXG"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -73,6 +73,14 @@
                                     <action selector="agregarTapped:" destination="iIY-Ku-SbV" eventType="touchUpInside" id="rGr-jd-IlC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y8T-8b-I1V">
+                                <rect key="frame" x="169" y="433" width="76" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Eliminar"/>
+                                <connections>
+                                    <action selector="eliminarTapped:" destination="iIY-Ku-SbV" eventType="touchUpInside" id="oqq-Dw-Jl6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ymw-fM-896"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -82,6 +90,8 @@
                             <constraint firstItem="t4o-NG-9le" firstAttribute="top" secondItem="2Eq-ph-eGf" secondAttribute="bottom" constant="24" id="d8m-55-gzd"/>
                             <constraint firstItem="I7a-N7-uDQ" firstAttribute="centerX" secondItem="iFW-Tr-zVy" secondAttribute="centerX" id="e3x-Et-jcb"/>
                             <constraint firstItem="I7a-N7-uDQ" firstAttribute="top" secondItem="t4o-NG-9le" secondAttribute="bottom" constant="38" id="ltu-5H-9Id"/>
+                            <constraint firstItem="Y8T-8b-I1V" firstAttribute="centerX" secondItem="iFW-Tr-zVy" secondAttribute="centerX" id="sdj-AG-4Xw"/>
+                            <constraint firstItem="Y8T-8b-I1V" firstAttribute="top" secondItem="I7a-N7-uDQ" secondAttribute="bottom" constant="36" id="v2m-Tw-ZF8"/>
                             <constraint firstItem="ymw-fM-896" firstAttribute="trailing" secondItem="t4o-NG-9le" secondAttribute="trailing" constant="60" id="yCS-0b-b1A"/>
                             <constraint firstItem="t4o-NG-9le" firstAttribute="leading" secondItem="ymw-fM-896" secondAttribute="leading" constant="60" id="zhq-et-rmq"/>
                         </constraints>
@@ -101,6 +111,8 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="agregarActualizarBoton" destination="I7a-N7-uDQ" id="sOu-P0-Px5"/>
+                        <outlet property="eliminarBoton" destination="Y8T-8b-I1V" id="dQz-LE-HD7"/>
                         <outlet property="imageView" destination="2Eq-ph-eGf" id="5c7-Lh-ApW"/>
                         <outlet property="titulotexField" destination="t4o-NG-9le" id="3NW-WD-bDG"/>
                     </connections>
